platform/networking/headscale/20-service-headscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
spec:
  type: ClusterIP
  selector:
    app: headscale
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
    - name: grpc
      port: 50443
      targetPort: 50443
