platform/networking/headscale/41-backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: headscale-upgrade
  namespace: headscale
spec:
  httpUpgrade:
    - type: tailscale-control-protocol
    - type: websocket
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: headscale-public
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: headscale-internal
